[gd_scene load_steps=52 format=3 uid="uid://btl45qb7c6jui"]

[ext_resource type="Script" path="res://topDownRooms/cellar.gd" id="1_h3ctt"]
[ext_resource type="Texture2D" uid="uid://bqpttlqy7ek5j" path="res://topDownRooms/background.jpg" id="2_pws71"]
[ext_resource type="PackedScene" uid="uid://cukqggd2dkija" path="res://topDownRooms/player.tscn" id="3_mdhhg"]
[ext_resource type="PackedScene" uid="uid://c62an72s5hnpl" path="res://topDownRooms/bot.tscn" id="4_n433y"]
[ext_resource type="PackedScene" uid="uid://458pyiebvfaa" path="res://topDownRooms/bot_2.tscn" id="5_0u7fu"]
[ext_resource type="PackedScene" uid="uid://blf7xw6snuq6a" path="res://topDownRooms/dealer.tscn" id="6_u8ta5"]
[ext_resource type="Script" path="res://topDownRooms/dealer_race.gd" id="9_omtd7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_msigm"]
bg_color = Color(0.597173, 0.597177, 0.597176, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.00184107, 0.00184107, 0.00184107, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="LabelSettings" id="LabelSettings_x3ccl"]
font_size = 8

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kf2q0"]
size = Vector2(104, 49)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7r2ng"]
size = Vector2(180, 181)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ftywi"]
size = Vector2(194, 114)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_ikbi7"]
a = Vector2(44, -52)
b = Vector2(10, 119)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_cj7pw"]
a = Vector2(83, 106)
b = Vector2(5, 104)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_aa20i"]
a = Vector2(83, 106)
b = Vector2(83, 300)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_hxhej"]
a = Vector2(380, 308)
b = Vector2(57, 310)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_ay0n1"]
a = Vector2(332, 91)
b = Vector2(336, 298)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_1bxqd"]
a = Vector2(332, 91)
b = Vector2(416, 90)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_x3yti"]
a = Vector2(417, 34)
b = Vector2(416, 90)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_3m83d"]
a = Vector2(417, 34)
b = Vector2(621, -127)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_c8nu0"]
a = Vector2(635, -127)
b = Vector2(621, -127)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_uw7kf"]
a = Vector2(635, -127)
b = Vector2(632, -258)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_evd6a"]
a = Vector2(582, -160)
b = Vector2(640, -159)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_l1aqq"]
a = Vector2(580, -172)
b = Vector2(574, -326)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_6obrl"]
a = Vector2(468, -242)
b = Vector2(580, -349)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_p70v2"]
a = Vector2(471, -237)
b = Vector2(376, -291)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_66gar"]
a = Vector2(377, -314)
b = Vector2(376, -291)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_dared"]
a = Vector2(525, -448)
b = Vector2(443, -483)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_n0q75"]
a = Vector2(460, -502)
b = Vector2(443, -483)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_yrcdp"]
a = Vector2(460, -502)
b = Vector2(398, -521)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_he4nb"]
a = Vector2(308, -521)
b = Vector2(398, -521)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_mjdys"]
a = Vector2(520, -451)
b = Vector2(375, -314)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_xwlnq"]
a = Vector2(-48, -63)
b = Vector2(-145, -6)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_l1xu7"]
a = Vector2(25, -71)
b = Vector2(-35, -62)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_kpcrm"]
a = Vector2(25, -71)
b = Vector2(39, -52)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_7f85b"]
a = Vector2(31, -62)
b = Vector2(-35, -62)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_s15u5"]
a = Vector2(37, 0)
b = Vector2(35, -57)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_1bi3o"]
a = Vector2(-65, 8)
b = Vector2(-27, -120)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_acsw4"]
a = Vector2(12, -48)
b = Vector2(-58, -48)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_kg3gd"]
a = Vector2(19, -52)
b = Vector2(51, -219)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_riltf"]
a = Vector2(147, -154)
b = Vector2(45, -265)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_cbc2i"]
a = Vector2(156, -149)
b = Vector2(250, -194)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_o1qtt"]
a = Vector2(96, -368)
b = Vector2(254, -212)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_x5u0g"]
a = Vector2(249, -197)
b = Vector2(254, -212)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_fea81"]
a = Vector2(196, -340)
b = Vector2(132, -310)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_ke1cb"]
a = Vector2(178, -366)
b = Vector2(192, -341)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_6a25k"]
a = Vector2(253, -374)
b = Vector2(172, -343)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_1ikbe"]
a = Vector2(229, -364)
b = Vector2(297, -363)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x0nq3"]
size = Vector2(253, 36)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_05cv2"]
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.0142752, 0.0142752, 0.0142752, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_left = 30

[sub_resource type="LabelSettings" id="LabelSettings_56tnk"]
font_size = 10

[node name="Cellar" type="Node2D"]
position = Vector2(1326, -1)
script = ExtResource("1_h3ctt")

[node name="Background" type="Sprite2D" parent="."]
scale = Vector2(0.65, 0.65)
texture = ExtResource("2_pws71")
centered = false

[node name="Player" parent="." instance=ExtResource("3_mdhhg")]
position = Vector2(-421, 305)
scale = Vector2(1.5, 1.5)

[node name="CellarCamera" type="Camera2D" parent="Player"]
position = Vector2(504.667, 152)
zoom = Vector2(1.6, 1.6)
limit_left = 1400
limit_top = 0
limit_right = 1975
limit_bottom = 650
limit_smoothed = true

[node name="Bot" parent="." instance=ExtResource("4_n433y")]
position = Vector2(-561, 84)
scale = Vector2(1.5, 1.5)

[node name="AnimatedSprite2D" parent="Bot" index="0"]
animation = &"down"

[node name="BotPanel" type="Panel" parent="Bot"]
visible = false
offset_left = 456.0
offset_top = 88.0
offset_right = 548.0
offset_bottom = 126.0
theme_override_styles/panel = SubResource("StyleBoxFlat_msigm")

[node name="BotSpeechBubble" type="Label" parent="Bot/BotPanel"]
visible = false
layout_mode = 0
offset_left = 3.55556
offset_top = 6.22222
offset_right = 92.5556
offset_bottom = 57.2222
text = "Watch where your 
walking Pal!!"
label_settings = SubResource("LabelSettings_x3ccl")
horizontal_alignment = 1

[node name="Bot2" parent="." instance=ExtResource("5_0u7fu")]
position = Vector2(-265, 90)
scale = Vector2(1.5, 1.5)

[node name="BotPanel" type="Panel" parent="Bot2"]
visible = false
offset_left = 456.0
offset_top = 88.0
offset_right = 548.0
offset_bottom = 126.0
theme_override_styles/panel = SubResource("StyleBoxFlat_msigm")

[node name="BotSpeechBubble" type="Label" parent="Bot2/BotPanel"]
visible = false
layout_mode = 0
offset_left = 2.66667
offset_top = 6.22222
offset_right = 92.6667
offset_bottom = 57.2222
text = "Get out of 
the way kid!!
"
label_settings = SubResource("LabelSettings_x3ccl")
horizontal_alignment = 1

[node name="Dealer" parent="." instance=ExtResource("6_u8ta5")]
position = Vector2(-311, -104)
scale = Vector2(1.5, 1.5)
script = ExtResource("9_omtd7")

[node name="Boundaries" type="StaticBody2D" parent="."]
scale = Vector2(0.65, 0.65)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(526, 418.5)
shape = SubResource("RectangleShape2D_kf2q0")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(524, 533.5)
shape = SubResource("RectangleShape2D_7r2ng")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(514, 257)
shape = SubResource("RectangleShape2D_ftywi")

[node name="CollisionShape2D10" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(305, 668)
shape = SubResource("SegmentShape2D_ikbi7")

[node name="CollisionShape2D18" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(305, 668)
shape = SubResource("SegmentShape2D_cj7pw")

[node name="CollisionShape2D19" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(305, 668)
shape = SubResource("SegmentShape2D_aa20i")

[node name="CollisionShape2D45" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(305, 668)
shape = SubResource("SegmentShape2D_hxhej")

[node name="CollisionShape2D23" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(305, 668)
shape = SubResource("SegmentShape2D_ay0n1")

[node name="CollisionShape2D24" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(305, 668)
shape = SubResource("SegmentShape2D_1bxqd")

[node name="CollisionShape2D25" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(305, 668)
shape = SubResource("SegmentShape2D_x3yti")

[node name="CollisionShape2D26" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(305, 668)
shape = SubResource("SegmentShape2D_3m83d")

[node name="CollisionShape2D27" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(305, 668)
shape = SubResource("SegmentShape2D_c8nu0")

[node name="CollisionShape2D28" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(305, 668)
shape = SubResource("SegmentShape2D_uw7kf")

[node name="CollisionShape2D29" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(305, 668)
shape = SubResource("SegmentShape2D_evd6a")

[node name="CollisionShape2D30" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(305, 668)
shape = SubResource("SegmentShape2D_l1aqq")

[node name="CollisionShape2D35" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(305, 668)
shape = SubResource("SegmentShape2D_6obrl")

[node name="CollisionShape2D36" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(305, 668)
shape = SubResource("SegmentShape2D_p70v2")

[node name="CollisionShape2D44" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(305, 668)
shape = SubResource("SegmentShape2D_66gar")

[node name="CollisionShape2D37" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(305, 668)
shape = SubResource("SegmentShape2D_dared")

[node name="CollisionShape2D39" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(305, 668)
shape = SubResource("SegmentShape2D_n0q75")

[node name="CollisionShape2D40" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(305, 668)
shape = SubResource("SegmentShape2D_yrcdp")

[node name="CollisionShape2D41" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(305, 668)
shape = SubResource("SegmentShape2D_he4nb")

[node name="CollisionShape2D38" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(305, 668)
shape = SubResource("SegmentShape2D_mjdys")

[node name="CollisionShape2D11" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(305, 668)
shape = SubResource("SegmentShape2D_xwlnq")

[node name="CollisionShape2D12" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(305, 668)
shape = SubResource("SegmentShape2D_l1xu7")

[node name="CollisionShape2D42" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(305, 668)
shape = SubResource("SegmentShape2D_kpcrm")

[node name="CollisionShape2D13" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(125, 663)
shape = SubResource("SegmentShape2D_7f85b")

[node name="CollisionShape2D14" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(125, 663)
shape = SubResource("SegmentShape2D_s15u5")

[node name="CollisionShape2D15" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(138, 592)
shape = SubResource("SegmentShape2D_1bi3o")

[node name="CollisionShape2D16" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(138, 592)
shape = SubResource("SegmentShape2D_acsw4")

[node name="CollisionShape2D17" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(138, 592)
shape = SubResource("SegmentShape2D_kg3gd")

[node name="CollisionShape2D20" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(138, 592)
shape = SubResource("SegmentShape2D_riltf")

[node name="CollisionShape2D21" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(138, 592)
shape = SubResource("SegmentShape2D_cbc2i")

[node name="CollisionShape2D22" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(138, 592)
shape = SubResource("SegmentShape2D_o1qtt")

[node name="CollisionShape2D43" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(138, 592)
shape = SubResource("SegmentShape2D_x5u0g")

[node name="CollisionShape2D31" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(138, 592)
shape = SubResource("SegmentShape2D_fea81")

[node name="CollisionShape2D32" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(138, 592)
shape = SubResource("SegmentShape2D_ke1cb")

[node name="CollisionShape2D33" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(138, 592)
shape = SubResource("SegmentShape2D_6a25k")

[node name="CollisionShape2D34" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(138, 592)
shape = SubResource("SegmentShape2D_1ikbe")

[node name="Exit" type="Area2D" parent="."]
scale = Vector2(0.65, 0.65)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Exit"]
position = Vector2(516.5, 976)
shape = SubResource("RectangleShape2D_x0nq3")

[node name="DealerPanel" type="Panel" parent="."]
visible = false
z_index = 5
offset_left = 202.0
offset_top = 34.0
offset_right = 420.0
offset_bottom = 107.0
theme_override_styles/panel = SubResource("StyleBoxFlat_05cv2")

[node name="DealerSpeechBubble" type="Label" parent="DealerPanel"]
visible = false
z_index = 5
layout_mode = 0
offset_left = 29.0
offset_top = 11.0
offset_right = 308.0
offset_bottom = 112.0
text = "Hello! 
Would you like to play Ride the Bus? 
press y to play!
      "
label_settings = SubResource("LabelSettings_56tnk")

[connection signal="body_entered" from="Bot/BotArea" to="." method="_on_bot_area_body_entered"]
[connection signal="body_exited" from="Bot/BotArea" to="." method="_on_bot_area_body_exited"]
[connection signal="body_entered" from="Bot2/Bot2Area" to="." method="_on_bot_2_area_body_entered"]
[connection signal="body_exited" from="Bot2/Bot2Area" to="." method="_on_bot_2_area_body_exited"]
[connection signal="body_entered" from="Dealer/SpeechArea" to="." method="_on_speech_area_body_entered"]
[connection signal="body_exited" from="Dealer/SpeechArea" to="." method="_on_speech_area_body_exited"]
[connection signal="body_entered" from="Exit" to="." method="_on_exit_body_entered"]

[editable path="Bot"]
[editable path="Bot2"]
[editable path="Dealer"]
